--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: inherit;
+  font-family: inherit;h
   font-size: inherit;
   line-height: inherit;
 }
@@ -11410,7 +11410,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/fondo.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
