--- a/css/styles.css
+++ b/css/styles.css
@@ -3031,7 +3031,7 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #ffc800;
+  background-color: #000000a8;
   border-color: #ffc800;
 }
 .btn-primary:hover {
